--- a/data/projects.yml
+++ b/data/projects.yml
@@ -1,15 +1,15 @@
-- name: Longest Word Game
-  description: Decent description of the app
+- name: Ikigai
+  description: Elderly care app
   image: projects/placeholder.png
   url: https://www.google.com
 
 - name: Movie Watchlist
-  description: Decent description of the app
+  description: You can see any movie here
   image: projects/placeholder.png
   url: https://www.google.com
 
-- name: Airbnb
-  description: Decent description of the app
+- name: WardroP
+  description: This is a place for being mature!
   image: projects/placeholder.png
   url: https://www.google.com
 
